// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: 01-linear-process.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "A single user task between a start event and an end event.",
  "accTitle": "Simple Linear Process",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "e1",
    },
  ],
  "lanes": [],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Start",
      "laneId": undefined,
      "poolId": undefined,
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Submit Request",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Done",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [],
}
`;

exports[`snapshot: 02-gateway-decision.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "A manager reviews a request and either approves or rejects it via an exclusive gateway.",
  "accTitle": "Purchase Request Approval",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "g1",
    },
    {
      "id": "f3",
      "kind": "conditional",
      "label": "yes",
      "source": "g1",
      "target": "t2",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "no",
      "source": "g1",
      "target": "t3",
    },
    {
      "id": "f5",
      "kind": "sequence",
      "source": "t2",
      "target": "e1",
    },
    {
      "id": "f6",
      "kind": "default",
      "source": "t3",
      "target": "e2",
    },
  ],
  "lanes": [],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Request Raised",
      "laneId": undefined,
      "poolId": undefined,
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Review Request",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Approved?",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Issue Purchase Order",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Notify Rejection",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Order Issued",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "e2",
      "kind": "event",
      "label": "Rejected",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [],
}
`;

exports[`snapshot: 03-pool-lane-collaboration.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Buyer and supplier pools exchange a purchase order via cross-pool message flow.",
  "accTitle": "Purchase Order Collaboration",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "t2",
    },
    {
      "id": "f3",
      "kind": "sequence",
      "source": "t2",
      "target": "g1",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "no",
      "source": "g1",
      "target": "e2",
    },
    {
      "id": "f5",
      "kind": "sequence",
      "source": "t3",
      "target": "t4",
    },
    {
      "id": "f6",
      "kind": "sequence",
      "source": "t4",
      "target": "e1",
    },
    {
      "id": "f7",
      "kind": "message",
      "source": "g1",
      "target": "t3",
    },
  ],
  "lanes": [
    {
      "id": "req",
      "label": "Requester",
      "poolId": "buyer",
    },
    {
      "id": "mgr",
      "label": "Manager",
      "poolId": "buyer",
    },
  ],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Need Identified",
      "laneId": "req",
      "poolId": "buyer",
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Submit PO Request",
      "laneId": "req",
      "poolId": "buyer",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Review Request",
      "laneId": "mgr",
      "poolId": "buyer",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Approved?",
      "laneId": "mgr",
      "poolId": "buyer",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "e2",
      "kind": "event",
      "label": "Rejected",
      "laneId": "mgr",
      "poolId": "buyer",
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Receive PO",
      "laneId": undefined,
      "poolId": "supplier",
      "position": undefined,
      "subtype": "receive",
    },
    {
      "id": "t4",
      "kind": "task",
      "label": "Acknowledge PO",
      "laneId": undefined,
      "poolId": "supplier",
      "position": undefined,
      "subtype": undefined,
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "PO Acknowledged",
      "laneId": undefined,
      "poolId": "supplier",
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [
    {
      "id": "buyer",
      "label": "Buyer",
      "laneIds": [
        "req",
        "mgr",
      ],
    },
    {
      "id": "supplier",
      "label": "Supplier",
      "laneIds": [],
    },
  ],
}
`;

exports[`snapshot: 04-multi-event.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Customer places an order. The system validates it, checks inventory, and either fulfills or cancels.",
  "accTitle": "Order Fulfillment Process",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "g1",
    },
    {
      "id": "f3",
      "kind": "conditional",
      "label": "valid",
      "source": "g1",
      "target": "t2",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "invalid",
      "source": "g1",
      "target": "t5",
    },
    {
      "id": "f5",
      "kind": "sequence",
      "source": "t2",
      "target": "g2",
    },
    {
      "id": "f6",
      "kind": "conditional",
      "label": "yes",
      "source": "g2",
      "target": "t3",
    },
    {
      "id": "f7",
      "kind": "conditional",
      "label": "no",
      "source": "g2",
      "target": "t4",
    },
    {
      "id": "f8",
      "kind": "sequence",
      "source": "t3",
      "target": "e1",
    },
    {
      "id": "f9",
      "kind": "default",
      "source": "t4",
      "target": "e2",
    },
    {
      "id": "f10",
      "kind": "sequence",
      "source": "t5",
      "target": "e2",
    },
  ],
  "lanes": [],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Order Placed",
      "laneId": undefined,
      "poolId": undefined,
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Validate Order",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Valid?",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Check Inventory",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "g2",
      "kind": "gateway",
      "label": "In Stock?",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Pick and Pack",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t4",
      "kind": "task",
      "label": "Notify Customer",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t5",
      "kind": "task",
      "label": "Cancel Order",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Order Shipped",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "e2",
      "kind": "event",
      "label": "Order Cancelled",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [],
}
`;

exports[`snapshot: 05-parallel-split.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Work is split in parallel across two service tasks and then joined before completion.",
  "accTitle": "Parallel Task Processing",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "g1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "g1",
      "target": "t1",
    },
    {
      "id": "f3",
      "kind": "sequence",
      "source": "g1",
      "target": "t2",
    },
    {
      "id": "f4",
      "kind": "sequence",
      "source": "t1",
      "target": "g2",
    },
    {
      "id": "f5",
      "kind": "sequence",
      "source": "t2",
      "target": "g2",
    },
    {
      "id": "f6",
      "kind": "sequence",
      "source": "g2",
      "target": "e1",
    },
  ],
  "lanes": [],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Trigger",
      "laneId": undefined,
      "poolId": undefined,
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Split",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "and",
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Run Background Job",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Send Notification",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "g2",
      "kind": "gateway",
      "label": "Join",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "and",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Complete",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [],
}
`;

exports[`snapshot: 06-cross-pool-collaboration.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Company procurement sends a purchase order to a vendor. The vendor reviews and either accepts, sending an acknowledgement back, or rejects, sending a rejection notice.",
  "accTitle": "Cross-Pool Vendor Collaboration",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "t2",
    },
    {
      "id": "f3",
      "kind": "sequence",
      "source": "t2",
      "target": "t7",
    },
    {
      "id": "f4",
      "kind": "sequence",
      "source": "t7",
      "target": "g2",
    },
    {
      "id": "f5",
      "kind": "conditional",
      "label": "accepted",
      "source": "g2",
      "target": "e1",
    },
    {
      "id": "f6",
      "kind": "conditional",
      "label": "rejected",
      "source": "g2",
      "target": "e2",
    },
    {
      "id": "f7",
      "kind": "sequence",
      "source": "t3",
      "target": "t4",
    },
    {
      "id": "f8",
      "kind": "sequence",
      "source": "t4",
      "target": "g1",
    },
    {
      "id": "f9",
      "kind": "conditional",
      "label": "yes",
      "source": "g1",
      "target": "t5",
    },
    {
      "id": "f10",
      "kind": "conditional",
      "label": "no",
      "source": "g1",
      "target": "t6",
    },
    {
      "id": "f11",
      "kind": "sequence",
      "source": "t5",
      "target": "e3",
    },
    {
      "id": "f12",
      "kind": "sequence",
      "source": "t6",
      "target": "e3",
    },
    {
      "id": "f13",
      "kind": "message",
      "source": "t2",
      "target": "t3",
    },
    {
      "id": "f14",
      "kind": "message",
      "source": "t5",
      "target": "t7",
    },
    {
      "id": "f15",
      "kind": "message",
      "source": "t6",
      "target": "t7",
    },
  ],
  "lanes": [
    {
      "id": "proc",
      "label": "Procurement",
      "poolId": "company",
    },
    {
      "id": "vendor_ops",
      "label": "Vendor Operations",
      "poolId": "vendor",
    },
  ],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Vendor Need Identified",
      "laneId": "proc",
      "poolId": "company",
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Create Purchase Order",
      "laneId": "proc",
      "poolId": "company",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Send PO to Vendor",
      "laneId": "proc",
      "poolId": "company",
      "position": undefined,
      "subtype": "send",
    },
    {
      "id": "t7",
      "kind": "task",
      "label": "Receive Vendor Response",
      "laneId": "proc",
      "poolId": "company",
      "position": undefined,
      "subtype": "receive",
    },
    {
      "id": "g2",
      "kind": "gateway",
      "label": "Response?",
      "laneId": "proc",
      "poolId": "company",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "PO Accepted",
      "laneId": "proc",
      "poolId": "company",
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "e2",
      "kind": "event",
      "label": "PO Rejected: Resubmit",
      "laneId": "proc",
      "poolId": "company",
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Receive Purchase Order",
      "laneId": "vendor_ops",
      "poolId": "vendor",
      "position": undefined,
      "subtype": "receive",
    },
    {
      "id": "t4",
      "kind": "task",
      "label": "Review PO Terms",
      "laneId": "vendor_ops",
      "poolId": "vendor",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Acceptable?",
      "laneId": "vendor_ops",
      "poolId": "vendor",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "t5",
      "kind": "task",
      "label": "Send Acceptance",
      "laneId": "vendor_ops",
      "poolId": "vendor",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t6",
      "kind": "task",
      "label": "Send Rejection Notice",
      "laneId": "vendor_ops",
      "poolId": "vendor",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "e3",
      "kind": "event",
      "label": "PO Processed",
      "laneId": "vendor_ops",
      "poolId": "vendor",
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [
    {
      "id": "company",
      "label": "Company",
      "laneIds": [
        "proc",
      ],
    },
    {
      "id": "vendor",
      "label": "Vendor",
      "laneIds": [
        "vendor_ops",
      ],
    },
  ],
}
`;

exports[`snapshot: 07-employee-onboarding.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "HR initiates onboarding and runs a background check. If the check passes, IT and HR complete setup tasks in parallel. The hiring manager confirms the new hire is ready to start.",
  "accTitle": "Employee Onboarding",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "t2",
    },
    {
      "id": "f3",
      "kind": "sequence",
      "source": "t2",
      "target": "g1",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "fail",
      "source": "g1",
      "target": "e_fail",
    },
    {
      "id": "f5",
      "kind": "conditional",
      "label": "pass",
      "source": "g1",
      "target": "g2",
    },
    {
      "id": "f6",
      "kind": "sequence",
      "source": "g2",
      "target": "t3",
    },
    {
      "id": "f7",
      "kind": "sequence",
      "source": "g2",
      "target": "t5",
    },
    {
      "id": "f8",
      "kind": "sequence",
      "source": "t3",
      "target": "t4",
    },
    {
      "id": "f9",
      "kind": "sequence",
      "source": "t4",
      "target": "g3",
    },
    {
      "id": "f10",
      "kind": "sequence",
      "source": "t5",
      "target": "g3",
    },
    {
      "id": "f11",
      "kind": "sequence",
      "source": "g3",
      "target": "t6",
    },
    {
      "id": "f12",
      "kind": "sequence",
      "source": "t6",
      "target": "t7",
    },
    {
      "id": "f13",
      "kind": "sequence",
      "source": "t7",
      "target": "e1",
    },
  ],
  "lanes": [
    {
      "id": "hr",
      "label": "HR",
      "poolId": "onboarding",
    },
    {
      "id": "it",
      "label": "IT",
      "poolId": "onboarding",
    },
    {
      "id": "hiring_manager",
      "label": "Hiring Manager",
      "poolId": "onboarding",
    },
  ],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Onboarding Initiated",
      "laneId": "hr",
      "poolId": "onboarding",
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Send Offer Documentation",
      "laneId": "hr",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Run Background Check",
      "laneId": "hr",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Background Check?",
      "laneId": "hr",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "e_fail",
      "kind": "event",
      "label": "Onboarding Terminated",
      "laneId": "hr",
      "poolId": "onboarding",
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "t5",
      "kind": "task",
      "label": "Complete Orientation Paperwork",
      "laneId": "hr",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Provision System Accounts",
      "laneId": "it",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t4",
      "kind": "task",
      "label": "Provision Equipment",
      "laneId": "it",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "g2",
      "kind": "gateway",
      "label": "Parallel Setup Tasks",
      "laneId": "hiring_manager",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "and",
    },
    {
      "id": "g3",
      "kind": "gateway",
      "label": "Setup Complete",
      "laneId": "hiring_manager",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "and",
    },
    {
      "id": "t6",
      "kind": "task",
      "label": "Review Onboarding Checklist",
      "laneId": "hiring_manager",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t7",
      "kind": "task",
      "label": "Confirm New Hire Ready",
      "laneId": "hiring_manager",
      "poolId": "onboarding",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "New Hire Onboarded",
      "laneId": "hiring_manager",
      "poolId": "onboarding",
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [
    {
      "id": "onboarding",
      "label": "Employee Onboarding",
      "laneIds": [
        "hr",
        "it",
        "hiring_manager",
      ],
    },
  ],
}
`;

exports[`snapshot: 08-purchase-order-approval.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Requester submits a PO request. Manager reviews and approves or rejects. Procurement issues the PO on approval.",
  "accTitle": "Purchase Order Approval",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "t2",
    },
    {
      "id": "f3",
      "kind": "sequence",
      "source": "t2",
      "target": "g1",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "yes",
      "source": "g1",
      "target": "t3",
    },
    {
      "id": "f5",
      "kind": "conditional",
      "label": "no",
      "source": "g1",
      "target": "t4",
    },
    {
      "id": "f6",
      "kind": "sequence",
      "source": "t3",
      "target": "e1",
    },
    {
      "id": "f7",
      "kind": "sequence",
      "source": "t4",
      "target": "e2",
    },
  ],
  "lanes": [
    {
      "id": "requester",
      "label": "Requester",
      "poolId": "po_process",
    },
    {
      "id": "manager",
      "label": "Manager",
      "poolId": "po_process",
    },
    {
      "id": "procurement",
      "label": "Procurement",
      "poolId": "po_process",
    },
  ],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "PO Request Submitted",
      "laneId": "requester",
      "poolId": "po_process",
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Submit PO Request",
      "laneId": "requester",
      "poolId": "po_process",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "e2",
      "kind": "event",
      "label": "Request Rejected",
      "laneId": "requester",
      "poolId": "po_process",
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Review PO Request",
      "laneId": "manager",
      "poolId": "po_process",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Approved?",
      "laneId": "manager",
      "poolId": "po_process",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "t4",
      "kind": "task",
      "label": "Send Rejection Notice",
      "laneId": "manager",
      "poolId": "po_process",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Issue Purchase Order",
      "laneId": "procurement",
      "poolId": "po_process",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "PO Issued",
      "laneId": "procurement",
      "poolId": "po_process",
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [
    {
      "id": "po_process",
      "label": "Purchase Order Process",
      "laneIds": [
        "requester",
        "manager",
        "procurement",
      ],
    },
  ],
}
`;

exports[`snapshot: 09-quote-to-order.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Sales representative gathers requirements and generates a quote. Discounts above threshold require Sales Manager approval. Finance validates credit before the quote is sent. Accepted quotes are converted to confirmed sales orders.",
  "accTitle": "Quote to Order",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "t2",
    },
    {
      "id": "f3",
      "kind": "sequence",
      "source": "t2",
      "target": "g1",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "yes -- above threshold",
      "source": "g1",
      "target": "t3",
    },
    {
      "id": "f5",
      "kind": "conditional",
      "label": "no -- within limit",
      "source": "g1",
      "target": "t4",
    },
    {
      "id": "f6",
      "kind": "sequence",
      "source": "t3",
      "target": "t4",
    },
    {
      "id": "f7",
      "kind": "sequence",
      "source": "t4",
      "target": "g2",
    },
    {
      "id": "f8",
      "kind": "conditional",
      "label": "approved",
      "source": "g2",
      "target": "t5",
    },
    {
      "id": "f9",
      "kind": "conditional",
      "label": "declined",
      "source": "g2",
      "target": "e2",
    },
    {
      "id": "f10",
      "kind": "sequence",
      "source": "t5",
      "target": "g3",
    },
    {
      "id": "f11",
      "kind": "conditional",
      "label": "accepted",
      "source": "g3",
      "target": "t6",
    },
    {
      "id": "f12",
      "kind": "conditional",
      "label": "declined",
      "source": "g3",
      "target": "e3",
    },
    {
      "id": "f13",
      "kind": "sequence",
      "source": "t6",
      "target": "e1",
    },
  ],
  "lanes": [
    {
      "id": "rep",
      "label": "Sales Representative",
      "poolId": "q2o",
    },
    {
      "id": "mgr",
      "label": "Sales Manager",
      "poolId": "q2o",
    },
    {
      "id": "finance",
      "label": "Finance",
      "poolId": "q2o",
    },
  ],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Customer Inquiry Received",
      "laneId": "rep",
      "poolId": "q2o",
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Gather Customer Requirements and Confirm Product Specifications",
      "laneId": "rep",
      "poolId": "q2o",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Generate Quote with Line Items, Pricing, and Applicable Discount",
      "laneId": "rep",
      "poolId": "q2o",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t5",
      "kind": "task",
      "label": "Send Quote to Customer and Record Delivery in CRM",
      "laneId": "rep",
      "poolId": "q2o",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t6",
      "kind": "task",
      "label": "Convert Accepted Quote to Confirmed Sales Order in ERP",
      "laneId": "rep",
      "poolId": "q2o",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Sales Order Confirmed",
      "laneId": "rep",
      "poolId": "q2o",
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "e3",
      "kind": "event",
      "label": "Quote Declined by Customer",
      "laneId": "rep",
      "poolId": "q2o",
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Discount Above Threshold?",
      "laneId": "mgr",
      "poolId": "q2o",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Review and Approve Discount Above Standard Threshold",
      "laneId": "mgr",
      "poolId": "q2o",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t4",
      "kind": "task",
      "label": "Validate Customer Credit Limit Before Issuing Quote",
      "laneId": "finance",
      "poolId": "q2o",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "g2",
      "kind": "gateway",
      "label": "Credit Approved?",
      "laneId": "finance",
      "poolId": "q2o",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "g3",
      "kind": "gateway",
      "label": "Quote Accepted by Customer?",
      "laneId": "finance",
      "poolId": "q2o",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "e2",
      "kind": "event",
      "label": "Quote Withdrawn: Credit Declined",
      "laneId": "finance",
      "poolId": "q2o",
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [
    {
      "id": "q2o",
      "label": "Quote to Order",
      "laneIds": [
        "rep",
        "mgr",
        "finance",
      ],
    },
  ],
}
`;

exports[`snapshot: 10-support-ticket-triage.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Customer submits a support ticket. Support team triages priority, handles high-priority tickets with parallel notification, and resolves all tickets before closing.",
  "accTitle": "Support Ticket Triage",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "t2",
    },
    {
      "id": "f3",
      "kind": "sequence",
      "source": "t2",
      "target": "g1",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "high",
      "source": "g1",
      "target": "g2",
    },
    {
      "id": "f5",
      "kind": "conditional",
      "label": "standard",
      "source": "g1",
      "target": "t6",
    },
    {
      "id": "f6",
      "kind": "sequence",
      "source": "g2",
      "target": "t3",
    },
    {
      "id": "f7",
      "kind": "sequence",
      "source": "g2",
      "target": "t4",
    },
    {
      "id": "f8",
      "kind": "sequence",
      "source": "t3",
      "target": "g3",
    },
    {
      "id": "f9",
      "kind": "sequence",
      "source": "t4",
      "target": "g3",
    },
    {
      "id": "f10",
      "kind": "sequence",
      "source": "g3",
      "target": "t5",
    },
    {
      "id": "f11",
      "kind": "sequence",
      "source": "t5",
      "target": "t7",
    },
    {
      "id": "f12",
      "kind": "sequence",
      "source": "t6",
      "target": "t7",
    },
    {
      "id": "f13",
      "kind": "sequence",
      "source": "t7",
      "target": "t8",
    },
    {
      "id": "f14",
      "kind": "sequence",
      "source": "t8",
      "target": "e1",
    },
  ],
  "lanes": [
    {
      "id": "customer",
      "label": "Customer",
      "poolId": "support",
    },
    {
      "id": "support_team",
      "label": "Support Team",
      "poolId": "support",
    },
  ],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Support Ticket Submitted",
      "laneId": "customer",
      "poolId": "support",
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Describe Issue",
      "laneId": "customer",
      "poolId": "support",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t8",
      "kind": "task",
      "label": "Receive Resolution Confirmation",
      "laneId": "customer",
      "poolId": "support",
      "position": undefined,
      "subtype": "receive",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Issue Resolved",
      "laneId": "customer",
      "poolId": "support",
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Review Ticket",
      "laneId": "support_team",
      "poolId": "support",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Priority?",
      "laneId": "support_team",
      "poolId": "support",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "g2",
      "kind": "gateway",
      "label": "Parallel Notify",
      "laneId": "support_team",
      "poolId": "support",
      "position": undefined,
      "subtype": "and",
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Alert On-Call Engineer",
      "laneId": "support_team",
      "poolId": "support",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t4",
      "kind": "task",
      "label": "Create Escalation Ticket",
      "laneId": "support_team",
      "poolId": "support",
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "g3",
      "kind": "gateway",
      "label": "Notifications Complete",
      "laneId": "support_team",
      "poolId": "support",
      "position": undefined,
      "subtype": "and",
    },
    {
      "id": "t5",
      "kind": "task",
      "label": "Resolve High-Priority Issue",
      "laneId": "support_team",
      "poolId": "support",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t6",
      "kind": "task",
      "label": "Resolve Standard Issue",
      "laneId": "support_team",
      "poolId": "support",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t7",
      "kind": "task",
      "label": "Send Resolution to Customer",
      "laneId": "support_team",
      "poolId": "support",
      "position": undefined,
      "subtype": "service",
    },
  ],
  "pools": [
    {
      "id": "support",
      "label": "Customer Support",
      "laneIds": [
        "customer",
        "support_team",
      ],
    },
  ],
}
`;
